--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "ChatBot",
   "description": "A telegram bot",
-  "logo": "https://te.legra.ph/file/dc32c85de4f1ad9b3456b.jpg",
+  "logo": "https://graph.org/file/33a15ad747ab90ab19ba6.jpg",
   "keywords": [
     "Chatbot",
     "mongodb",
@@ -11,7 +11,7 @@
     "buildpacks": [{
     "url": "heroku/python"
   }],
-  "repository": "https://github.com/venombolteop/ChatbotV2",
+  "repository": "https://github.com/THEMOHMAYA/TMMChatbotV2",
   "env": {
     "API_ID": {
       "description": "Get this value from my.telegram.org/apps.",
@@ -36,7 +36,7 @@
     "OWNER_ID": {
       "description": "User id of the user who will known as owner of the bot.",
       "required": true,
-      "value": "5822700831"
+      "value": "5311223486"
     }
   }
 }
